Fix spacing

--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 .cont {
     width: 100%;
     height: 100vh;
-    padding-bottom: 5vh;
+    padding-bottom: 10vh;
     display: flex;
     justify-content: center;
     flex-direction: column;
